# DCL_CameraNUI

src/Components/CameraNUI/: CMakeLists.txt  CameraNUI.cpp  CameraNUI.hpp
src/Components/DepthConverter/: CMakeLists.txt  DepthConverter.cpp  DepthConverter.hpp
src/cmake/Modules/: Findlibfreenect.cmake
tasks/: KinectDisplay.xml
